Las ventanas con numeros ya estan probadas y terminadas

--- a/src/Interfaz/AGInicio.form
+++ b/src/Interfaz/AGInicio.form
@@ -163,19 +163,11 @@
                               </Group>
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jBGananciaPromedio" min="-2" pref="215" max="-2" attributes="0"/>
-                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="jComprarInsumo" min="-2" pref="215" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                          <Component id="jPropinasChef1" min="-2" pref="215" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <EmptySpace min="-2" pref="458" max="-2" attributes="0"/>
-                                          <Component id="jChefMayorPropina" min="-2" pref="215" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
+                                  <Component id="jBGananciaPromedio" min="-2" pref="215" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="jComprarInsumo" min="-2" pref="215" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="jChefMayorPropina" min="-2" pref="215" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="0" pref="29" max="32767" attributes="0"/>
@@ -240,28 +232,18 @@
                       </Group>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="jPropinasChef1" min="-2" pref="46" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jChefMayorPropina" min="-2" pref="46" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                          <Component id="jCamMayorPropina" min="-2" pref="46" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jBGananciaPromedio" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
-                              <Component id="jComprarInsumo" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jHistorialCompras" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
-                              <Component id="jBGananciaNetaPorFecha" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace pref="35" max="32767" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jBGananciaPromedio" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      <Component id="jComprarInsumo" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      <Component id="jChefMayorPropina" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                   </Group>
+                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jHistorialCompras" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      <Component id="jBGananciaNetaPorFecha" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      <Component id="jCamMayorPropina" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="35" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jPropinasCam" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                       <Component id="jBComprasFecha" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
@@ -441,23 +423,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Compras"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JButton" name="jPropinasChef1">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="66" red="0" type="rgb"/>
-            </Property>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Microsoft YaHei UI" size="14" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Chefs"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jPropinasChef1ActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jComprarInsumo">
           <Properties>
